# yt-audio-cutter

./: LICENSE  README.md  pyproject.toml
src/yt_audio_cutter/: app.py  cutter.py  downloader.py  main_window.py  main_window.ui  main_window_ui.py  utils.py
